src/parser/y.output
State 20 conflicts: 11 reduce/reduce
State 24 conflicts: 1 shift/reduce
State 42 conflicts: 16 reduce/reduce
State 45 conflicts: 10 shift/reduce
State 46 conflicts: 10 shift/reduce
State 47 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 84 conflicts: 2 shift/reduce
State 85 conflicts: 2 shift/reduce
State 86 conflicts: 10 shift/reduce
State 87 conflicts: 10 shift/reduce
State 88 conflicts: 10 shift/reduce
State 89 conflicts: 10 shift/reduce
State 90 conflicts: 10 shift/reduce
State 91 conflicts: 10 shift/reduce
State 92 conflicts: 10 shift/reduce
State 93 conflicts: 10 shift/reduce
State 94 conflicts: 10 shift/reduce
State 95 conflicts: 10 shift/reduce
State 122 conflicts: 10 shift/reduce


Grammar

    0 $accept: program $end

    1 identifierText: ID
    2               | ID DOT identifierText

    3 identifier: identifierText
    4           | SELF

    5 imports: IMPORT stringLiteral AS ID SEMICOLON
    6        | IMPORT stringLiteral AS ID SEMICOLON imports

    7 multiplyExpression: NUMBER
    8                   | identifier
    9                   | functionCall
   10                   | OPENPAREN multiplyExpression CLOSEPAREN
   11                   | multiplyExpression TIMES multiplyExpression
   12                   | multiplyExpression DIVIDE multiplyExpression

   13 expression: multiplyExpression
   14           | expression PLUS expression
   15           | expression MINUS expression
   16           | MINUS expression
   17           | booleanExpression
   18           | structInstantiation
   19           | stringLiteral
   20           | ternary
   21           | OPENPAREN expression CLOSEPAREN

   22 booleanExpression: TRUE
   23                  | FALSE
   24                  | identifier
   25                  | OPENPAREN booleanExpression CLOSEPAREN
   26                  | expression EQ expression
   27                  | expression NEQ expression
   28                  | expression LT expression
   29                  | expression GT expression
   30                  | expression LE expression
   31                  | expression GE expression
   32                  | NOT expression
   33                  | expression AND expression
   34                  | expression OR expression

   35 type: TEXT
   36     | NUMBERTOKEN
   37     | LOGICAL
   38     | VOID
   39     | identifier

   40 variableDeclaration: type ID SEMICOLON

   41 variableDefinition: type ID ASSIGN expression SEMICOLON

   42 argList: type ID
   43        | type ID COMMA argList

   44 functionDeclaration: type ID OPENPAREN CLOSEPAREN OPENCURLY body CLOSECURLY
   45                    | type ID OPENPAREN CLOSEPAREN OPENCURLY CLOSECURLY
   46                    | type ID OPENPAREN argList CLOSEPAREN OPENCURLY body CLOSECURLY
   47                    | type ID OPENPAREN argList CLOSEPAREN OPENCURLY CLOSECURLY

   48 exprList: expression
   49         | expression COMMA exprList

   50 functionCall: identifier OPENPAREN CLOSEPAREN
   51             | identifier OPENPAREN exprList CLOSEPAREN

   52 variableDeclarationList: variableDeclaration
   53                        | variableDeclaration variableDeclarationList

   54 structDeclaration: STRUCT ID OPENCURLY variableDeclarationList CLOSECURLY
   55                  | STRUCT ID OPENCURLY CLOSECURLY

   56 structInstantiation: identifier OPENCURLY exprList CLOSECURLY

   57 stringLiteral: DOUBLEQUOTEDSTRING
   58              | SINGLEQUOTEDSTRING

   59 ternary: booleanExpression QUESTION expression COLON expression

   60 namespaceDeclaration: NAMESPACE identifier OPENCURLY body CLOSECURLY
   61                     | NAMESPACE identifier OPENCURLY CLOSECURLY

   62 return: RETURN SEMICOLON
   63       | RETURN expression SEMICOLON

   64 statement: variableDefinition
   65          | structDeclaration
   66          | namespaceDeclaration
   67          | expression SEMICOLON
   68          | functionDeclaration
   69          | return

   70 body: statement
   71     | statement body

   72 program: %empty
   73        | body
   74        | imports
   75        | imports body


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IMPORT <tokenText> (258) 5 6
    AS <tokenText> (259) 5 6
    NAMESPACE <tokenText> (260) 60 61
    STRUCT <tokenText> (261) 54 55
    SELF <tokenText> (262) 4
    TRUE <tokenText> (263) 22
    FALSE <tokenText> (264) 23
    TEXT <tokenText> (265) 35
    LOGICAL <tokenText> (266) 37
    NUMBERTOKEN <tokenText> (267) 36
    VOID <tokenText> (268) 38
    RETURN <tokenText> (269) 62 63
    NUMBER <tokenText> (270) 7
    SINGLEQUOTEDSTRING <tokenText> (271) 58
    DOUBLEQUOTEDSTRING <tokenText> (272) 57
    ID <tokenText> (273) 1 2 5 6 40 41 42 43 44 45 46 47 54 55
    PLUS <tokenText> (274) 14
    MINUS <tokenText> (275) 15 16
    TIMES <tokenText> (276) 11
    DIVIDE <tokenText> (277) 12
    EQ <tokenText> (278) 26
    NEQ <tokenText> (279) 27
    LT <tokenText> (280) 28
    GT <tokenText> (281) 29
    LE <tokenText> (282) 30
    GE <tokenText> (283) 31
    AND <tokenText> (284) 33
    OR <tokenText> (285) 34
    NOT <tokenText> (286) 32
    ASSIGN <tokenText> (287) 41
    COMMA <tokenText> (288) 43 49
    SEMICOLON <tokenText> (289) 5 6 40 41 62 63 67
    COLON <tokenText> (290) 59
    QUESTION <tokenText> (291) 59
    DOT <tokenText> (292) 2
    OPENPAREN <tokenText> (293) 10 21 25 44 45 46 47 50 51
    CLOSEPAREN <tokenText> (294) 10 21 25 44 45 46 47 50 51
    OPENCURLY <tokenText> (295) 44 45 46 47 54 55 56 60 61
    CLOSECURLY <tokenText> (296) 44 45 46 47 54 55 56 60 61


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    identifierText <identifierText> (43)
        on left: 1 2
        on right: 2 3
    identifier <identifier> (44)
        on left: 3 4
        on right: 8 24 39 50 51 56 60 61
    imports <imports> (45)
        on left: 5 6
        on right: 6 74 75
    multiplyExpression <multiplyExpression> (46)
        on left: 7 8 9 10 11 12
        on right: 10 11 12 13
    expression <expression> (47)
        on left: 13 14 15 16 17 18 19 20 21
        on right: 14 15 16 21 26 27 28 29 30 31 32 33 34 41 48 49 59 63 67
    booleanExpression <booleanExpression> (48)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 17 25 59
    type <type> (49)
        on left: 35 36 37 38 39
        on right: 40 41 42 43 44 45 46 47
    variableDeclaration <variableDeclaration> (50)
        on left: 40
        on right: 52 53
    variableDefinition <variableDefinition> (51)
        on left: 41
        on right: 64
    argList <argList> (52)
        on left: 42 43
        on right: 43 46 47
    functionDeclaration <functionDeclaration> (53)
        on left: 44 45 46 47
        on right: 68
    exprList <exprList> (54)
        on left: 48 49
        on right: 49 51 56
    functionCall <functionCall> (55)
        on left: 50 51
        on right: 9
    variableDeclarationList <variableDeclarationList> (56)
        on left: 52 53
        on right: 53 54
    structDeclaration <structDeclaration> (57)
        on left: 54 55
        on right: 65
    structInstantiation <structInstantiation> (58)
        on left: 56
        on right: 18
    stringLiteral <stringLiteral> (59)
        on left: 57 58
        on right: 5 6 19
    ternary <ternary> (60)
        on left: 59
        on right: 20
    namespaceDeclaration <namespaceDeclaration> (61)
        on left: 60 61
        on right: 66
    return <returnStatement> (62)
        on left: 62 63
        on right: 69
    statement <statement> (63)
        on left: 64 65 66 67 68 69
        on right: 70 71
    body <body> (64)
        on left: 70 71
        on right: 44 46 60 71 73 75
    program <program> (65)
        on left: 72 73 74 75
        on right: 0


State 0

    0 $accept: . program $end

    IMPORT              shift, and go to state 1
    NAMESPACE           shift, and go to state 2
    STRUCT              shift, and go to state 3
    SELF                shift, and go to state 4
    TRUE                shift, and go to state 5
    FALSE               shift, and go to state 6
    TEXT                shift, and go to state 7
    LOGICAL             shift, and go to state 8
    NUMBERTOKEN         shift, and go to state 9
    VOID                shift, and go to state 10
    RETURN              shift, and go to state 11
    NUMBER              shift, and go to state 12
    SINGLEQUOTEDSTRING  shift, and go to state 13
    DOUBLEQUOTEDSTRING  shift, and go to state 14
    ID                  shift, and go to state 15
    MINUS               shift, and go to state 16
    NOT                 shift, and go to state 17
    OPENPAREN           shift, and go to state 18

    $default  reduce using rule 72 (program)

    identifierText        go to state 19
    identifier            go to state 20
    imports               go to state 21
    multiplyExpression    go to state 22
    expression            go to state 23
    booleanExpression     go to state 24
    type                  go to state 25
    variableDefinition    go to state 26
    functionDeclaration   go to state 27
    functionCall          go to state 28
    structDeclaration     go to state 29
    structInstantiation   go to state 30
    stringLiteral         go to state 31
    ternary               go to state 32
    namespaceDeclaration  go to state 33
    return                go to state 34
    statement             go to state 35
    body                  go to state 36
    program               go to state 37


State 1

    5 imports: IMPORT . stringLiteral AS ID SEMICOLON
    6        | IMPORT . stringLiteral AS ID SEMICOLON imports

    SINGLEQUOTEDSTRING  shift, and go to state 13
    DOUBLEQUOTEDSTRING  shift, and go to state 14

    stringLiteral  go to state 38


State 2

   60 namespaceDeclaration: NAMESPACE . identifier OPENCURLY body CLOSECURLY
   61                     | NAMESPACE . identifier OPENCURLY CLOSECURLY

    SELF  shift, and go to state 4
    ID    shift, and go to state 15

    identifierText  go to state 19
    identifier      go to state 39


State 3

   54 structDeclaration: STRUCT . ID OPENCURLY variableDeclarationList CLOSECURLY
   55                  | STRUCT . ID OPENCURLY CLOSECURLY

    ID  shift, and go to state 40


State 4

    4 identifier: SELF .

    $default  reduce using rule 4 (identifier)


State 5

   22 booleanExpression: TRUE .

    $default  reduce using rule 22 (booleanExpression)


State 6

   23 booleanExpression: FALSE .

    $default  reduce using rule 23 (booleanExpression)


State 7

   35 type: TEXT .

    $default  reduce using rule 35 (type)


State 8

   37 type: LOGICAL .

    $default  reduce using rule 37 (type)


State 9

   36 type: NUMBERTOKEN .

    $default  reduce using rule 36 (type)


State 10

   38 type: VOID .

    $default  reduce using rule 38 (type)


State 11

   62 return: RETURN . SEMICOLON
   63       | RETURN . expression SEMICOLON

    SELF                shift, and go to state 4
    TRUE                shift, and go to state 5
    FALSE               shift, and go to state 6
    NUMBER              shift, and go to state 12
    SINGLEQUOTEDSTRING  shift, and go to state 13
    DOUBLEQUOTEDSTRING  shift, and go to state 14
    ID                  shift, and go to state 15
    MINUS               shift, and go to state 16
    NOT                 shift, and go to state 17
    SEMICOLON           shift, and go to state 41
    OPENPAREN           shift, and go to state 18

    identifierText       go to state 19
    identifier           go to state 42
    multiplyExpression   go to state 22
    expression           go to state 43
    booleanExpression    go to state 24
    functionCall         go to state 28
    structInstantiation  go to state 30
    stringLiteral        go to state 31
    ternary              go to state 32


State 12

    7 multiplyExpression: NUMBER .

    $default  reduce using rule 7 (multiplyExpression)


State 13

   58 stringLiteral: SINGLEQUOTEDSTRING .

    $default  reduce using rule 58 (stringLiteral)


State 14

   57 stringLiteral: DOUBLEQUOTEDSTRING .

    $default  reduce using rule 57 (stringLiteral)


State 15

    1 identifierText: ID .
    2               | ID . DOT identifierText

    DOT  shift, and go to state 44

    $default  reduce using rule 1 (identifierText)


State 16

   16 expression: MINUS . expression

    SELF                shift, and go to state 4
    TRUE                shift, and go to state 5
    FALSE               shift, and go to state 6
    NUMBER              shift, and go to state 12
    SINGLEQUOTEDSTRING  shift, and go to state 13
    DOUBLEQUOTEDSTRING  shift, and go to state 14
    ID                  shift, and go to state 15
    MINUS               shift, and go to state 16
    NOT                 shift, and go to state 17
    OPENPAREN           shift, and go to state 18

    identifierText       go to state 19
    identifier           go to state 42
    multiplyExpression   go to state 22
    expression           go to state 45
    booleanExpression    go to state 24
    functionCall         go to state 28
    structInstantiation  go to state 30
    stringLiteral        go to state 31
    ternary              go to state 32


State 17

   32 booleanExpression: NOT . expression

    SELF                shift, and go to state 4
    TRUE                shift, and go to state 5
    FALSE               shift, and go to state 6
    NUMBER              shift, and go to state 12
    SINGLEQUOTEDSTRING  shift, and go to state 13
    DOUBLEQUOTEDSTRING  shift, and go to state 14
    ID                  shift, and go to state 15
    MINUS               shift, and go to state 16
    NOT                 shift, and go to state 17
    OPENPAREN           shift, and go to state 18

    identifierText       go to state 19
    identifier           go to state 42
    multiplyExpression   go to state 22
    expression           go to state 46
    booleanExpression    go to state 24
    functionCall         go to state 28
    structInstantiation  go to state 30
    stringLiteral        go to state 31
    ternary              go to state 32


State 18

   10 multiplyExpression: OPENPAREN . multiplyExpression CLOSEPAREN
   21 expression: OPENPAREN . expression CLOSEPAREN
   25 booleanExpression: OPENPAREN . booleanExpression CLOSEPAREN

    SELF                shift, and go to state 4
    TRUE                shift, and go to state 5
    FALSE               shift, and go to state 6
    NUMBER              shift, and go to state 12
    SINGLEQUOTEDSTRING  shift, and go to state 13
    DOUBLEQUOTEDSTRING  shift, and go to state 14
    ID                  shift, and go to state 15
    MINUS               shift, and go to state 16
    NOT                 shift, and go to state 17
    OPENPAREN           shift, and go to state 18

    identifierText       go to state 19
    identifier           go to state 42
    multiplyExpression   go to state 47
    expression           go to state 48
    booleanExpression    go to state 49
    functionCall         go to state 28
    structInstantiation  go to state 30
    stringLiteral        go to state 31
    ternary              go to state 32


State 19

    3 identifier: identifierText .

    $default  reduce using rule 3 (identifier)


State 20

    8 multiplyExpression: identifier .
   24 booleanExpression: identifier .
   39 type: identifier .
   50 functionCall: identifier . OPENPAREN CLOSEPAREN
   51             | identifier . OPENPAREN exprList CLOSEPAREN
   56 structInstantiation: identifier . OPENCURLY exprList CLOSECURLY

    OPENPAREN  shift, and go to state 50
    OPENCURLY  shift, and go to state 51
